tests/e2e/complex_nested_expression5.error
Error: syntax error in story at line 1, column 1

1|    1 + 0.1 < 2 - 0.2 <= 3 / 0.3 == 4 * 0.4 != 5 * 0.5 > 6 * 0.6 >= 7 * 0.7
      ^^^^^^^^^^^^^^^^^^^^^^

E0123: `boolean` can't be compared with `float`
